--- a/fma/src/main/resources/templates/hardware.html
+++ b/fma/src/main/resources/templates/hardware.html
@@ -27,5 +27,8 @@
             </tr>
         </tbody>
     </table>
+    <form>
+        <button type="submit" formaction="/">메인으로</button>
+    </form>
 </body>
 </html>
