--- a/fma/src/main/resources/templates/main.html
+++ b/fma/src/main/resources/templates/main.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 main
+<form action="/login/logout">
+    <input type="submit" value="로그아웃"/>
+</form>
+<p>
+    <form method="post">
+        <button th:if="${session.loginMember.getAuth() == 'admin'}" type="submit" formaction="/users">유저 관리</button>
+        <button type="submit" formaction="/hardware">데이터 관리</button>
+    </form>
+</p>
 </body>
 </html>
