--- a/fma/src/main/resources/templates/users.html
+++ b/fma/src/main/resources/templates/users.html
@@ -25,5 +25,8 @@
             </tr>
         </tbody>
     </table>
+    <form>
+        <button type="submit" formaction="/">메인으로</button>
+    </form>
 </body>
 </html>
