--- a/fma/src/main/resources/static/css/main.css
+++ b/fma/src/main/resources/static/css/main.css
@@ -31,7 +31,7 @@ body {
     height: 100%;
 }
 
-#topMenu button {
+ button {
     padding: 7px 24px;
     border-radius: 5px;
     font-size: 14px;
@@ -53,6 +53,11 @@ main {
     border-radius: 8px;
     padding: 30px 0;
 }
+span{
+    font-size: 40px;
+    float : left;
+    margin-left: 500px;
+}
 
 .main-left {
     width: 380px;
@@ -61,7 +66,9 @@ main {
 .main-left-btn {
     margin-bottom: 15px;
 }
-
+.main-right-btn {
+    margin-bottom: 15px;
+}
 .main-left-btn button {
     padding: 7px 24px;
     border-radius: 5px;
@@ -70,7 +77,6 @@ main {
     color: #000;
     border: none;
 }
-
 .main-left-component {
     display: flex;
     width: 100%;
