--- a/fma/src/main/resources/templates/login/logout.html
+++ b/fma/src/main/resources/templates/login/logout.html
@@ -6,15 +6,29 @@
 			body {
 				background-image: url("../image/robot-g4489e9f3f_1920.jpg");
 			}
+			h1{
+				padding-top: 50px;
+				font-size: 50px;
+			}
+			button {
+    			padding: 7px 24px;
+    			border-radius: 5px;
+    			font-size: 14px;
+    			font-weight: 500;
+    			color: #000;
+    			border: none;
+    			margin-left: 10px;
+			}
 		</style>
 	</head>
 	<body>
 	<div align="center">
 	<th:block layout:fragment="content" align="center">
 	    <div><h1>Logout</h1></div>
-            <br><br><br><br><br><br>
+		<img src="../image/robot.PNG" width="150px" height="150px">
+            <br><br><br>
 			<h3>안전하게 로그아웃 완료했습니다.</h3>
-            <button onclick="location.href='login/loginForm.html'">로그인하기</button>
+            <button onclick="location.href='/'">MAIN</button>
 	</th:block>
 	</div>
 </body>
