--- a/fma/src/main/resources/static/css/main.css
+++ b/fma/src/main/resources/static/css/main.css
@@ -52,11 +52,13 @@ main {
     border: 1.8px solid black;
     border-radius: 8px;
     padding: 30px 0;
+   background-color: #D7D7D7;
 }
 span{
     font-size: 40px;
     float : left;
     margin-left: 500px;
+    font: bold;
 }
 
 .main-left {
