--- a/fma/src/main/resources/templates/main.html
+++ b/fma/src/main/resources/templates/main.html
@@ -9,12 +9,12 @@
 <div class="container">
 <header id = "topMenu" align="right">
         <span>FMA PROJECT</span>
-        <button class="topLink" onclick="location.href='login'">관리자 로그인</button>
-        <button class="logout" onclick="location.href='login/logout'">로그아웃</button>
+        <button class="topLink" onclick="location.href='login'" th:if="${session.loginMember == null}">관리자 로그인</button>
+        <button class="logout" onclick="location.href='login/logout'" th:if="${session.loginMember != null}">로그아웃</button>
 
 </header>
 
-<main >
+<main>
     <div class="main-left" th:if="${session.loginMember != null}">
         <div class="main-left-btn">
             <button class="btn-auto">자동</button>
