--- a/fma/src/main/resources/templates/users.html
+++ b/fma/src/main/resources/templates/users.html
@@ -5,9 +5,9 @@
     <link th:href="@{/css/users.css}" rel="stylesheet" type="text/css">
     <title>회원 목록</title>
 </head>
-<body>
+<body align="center">
     <h1>회원 목록 테이블</h1>
-    <table>
+    <table align="center" width="400px" height="100px">
         <thead>
             <tr>
                 <th>id</th>
@@ -26,6 +26,7 @@
         </tbody>
     </table>
     <form>
+    </br>
         <button type="submit" formaction="/">메인으로</button>
     </form>
 </body>
