--- a/fma/src/main/resources/templates/hardware.html
+++ b/fma/src/main/resources/templates/hardware.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{/css/users.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/hardware.css}" rel="stylesheet" type="text/css">
     <title>데이터 목록</title>
 </head>
-<body>
+<body align="center">
     <h1>데이터 테이블</h1>
-    <table>
+    <table align="center" width="400px" height="100px">
         <thead>
             <tr>
                 <th>id</th>
@@ -26,6 +26,7 @@
         </tbody>
     </table>
     <form>
+    </br>
         <button type="submit" formaction="/">메인으로</button>
     </form>
 </body>
