--- a/fma/src/main/resources/templates/main.html
+++ b/fma/src/main/resources/templates/main.html
@@ -9,7 +9,8 @@
 <div class="container">
 <header id = "topMenu" align="right">
         <span>FMA PROJECT</span>
-        <button class="topLink" onclick="location.href='login'" th:if="${session.loginMember == null}">관리자 로그인</button>
+        <button class="topLink" onclick="location.href='login'" th:if="${session.loginMember == null}">로그인</button>
+        <button class="topLink" onclick="location.href='register'" th:if="${session.loginMember == null}">회원가입</button>
          <div th:if="${session.loginMember != null}">
            <form action="users" method="post"> <button class="user" th:if="${session.loginMember.auth=='admin'}">회원관리</button></form>
          </br>
