--- a/fma/src/main/resources/templates/register.html
+++ b/fma/src/main/resources/templates/register.html
@@ -21,6 +21,11 @@
   				height:30px;
   				font-size:20px;
 			}
+			button{
+				width:100px;
+  				height:30px;
+  				font-size:20px;
+			}
 			div{
 				padding-top: 10px;
 			}
@@ -48,7 +53,7 @@
 						<input name="name" type="text" placeholder="Name" required />
 					</div>
 	                <div>
-                    	<input type="submit" value="회원가입"/>
+                    	<button class="topLink" onclick="location.href='login'">회원가입</button>
 	                </div>
 	            </form>
 				<br><br><br>
