Modify Register Form

--- a/fma/src/main/resources/templates/register.html
+++ b/fma/src/main/resources/templates/register.html
@@ -53,7 +53,7 @@
 						<input name="name" type="text" placeholder="Name" required />
 					</div>
 	                <div>
-                    	<button class="topLink" onclick="location.href='login'">회원가입</button>
+                    	<input type="submit" class="topLink" value = "회원가입"/>
 	                </div>
 	            </form>
 				<br><br><br>
