--- a/fma/src/main/resources/templates/main.html
+++ b/fma/src/main/resources/templates/main.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
 <title>main</title>
+<script language="javascript">
+    function dataReload() {
+        data.location.reload();
+    }
+</script>
 </head>
 <body>
 <div class="container">
@@ -14,7 +19,6 @@
          <div th:if="${session.loginMember != null}">
            <form action="users" method="post"> <button class="user" th:if="${session.loginMember.auth=='admin'}">회원관리</button></form>
          </br>
-           <form action="hardware" method="post"><button class="data" th:if="${session.loginMember.auth=='admin'}">데이터조회</button></form>
         </div>
     </br>
         <button class="logout" onclick="location.href='login/logout'" th:if="${session.loginMember != null}">로그아웃</button>
@@ -41,8 +45,11 @@
         <div class="main-right-btn">
         <button class="testBtn">TEST</button>
         <button class="runBtn">RUN</button>
+        <button class="refresh" onclick="dataReload()">REFRESH</button>
     </div>
-        <div class="result-value"></div>
+        <div class="result-value">
+            <iframe src="hardware" name="data" style="width:100%; height:100%"/>
+        </div>
     </div>
 </main>
 
