--- a/fma/src/main/resources/templates/register.html
+++ b/fma/src/main/resources/templates/register.html
@@ -21,11 +21,6 @@
   				height:30px;
   				font-size:20px;
 			}
-			button{
-				width:100px;
-  				height:30px;
-  				font-size:20px;
-			}
 			div{
 				padding-top: 10px;
 			}
@@ -53,7 +48,7 @@
 						<input name="name" type="text" placeholder="Name" required />
 					</div>
 	                <div>
-                    	<input type="submit" class="topLink" value = "회원가입"/>
+                    	<input type="submit" value = "회원가입"/>
 	                </div>
 	            </form>
 				<br><br><br>
